edited blog post
fixed based on feedback

--- a/ahmedf/index.html
+++ b/ahmedf/index.html
@@ -143,6 +143,7 @@
     <li>Ask What If Questions: Test scenarios before executing a solution.</li>
     <li>Use MBSE Tools: Learn UML or simulation platforms like MATLAB/Simulink.</li>
   </ol>
+  <footer class="article-footer"></footer>
   <h3>References</h3>
   <ul>
     <li>Johnson, J. (2020). <em>Designing with the Mind in Mind</em> (3rd ed.). Elsevier S & T. <a href="https://cwu.vitalsource.com/books/9780128182031" target="_blank">https://cwu.vitalsource.com/books/9780128182031</a></li>
@@ -271,15 +272,7 @@
       </ul>
     </footer>
          <!-- Module 2.1 Blog Post Starts here -->
-          <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design for People: How Perception, Empathy, and Attention Mold Human-Centered Design</title>
-</head>
-<body>
-
+          
     <h1>Design for People: How Perception, Empathy, and Attention Mold Human-Centered Design</h1>
 
     <p>In a time where products, services, and systems compete for users time, trust, and attention, the question isnt just what we are creating, but for whom and why. Designing for people, also termed human-centered design, is more than a philosophy; it is a method rooted in empathy, perception, and psychological understanding. Human-centered design spotlights human needs, contexts, and behaviors throughout the design process, seeking to build intuitive, accessible, and meaningful user experiences.</p>
@@ -343,18 +336,8 @@
         <li>Laws of UX. (n.d.). Principles that designers can consider when building user interfaces. <a href="https://lawsofux.com" target="_blank">https://lawsofux.com</a></li>
     </ul>
 
-</body>
-</html>
-
 
          <!-- Module 2.2 Blog Post Starts here -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>How Memory and Mental Models Influence User Interaction</title>
-</head>
-<body>
 
   <h1>How Memory and Mental Models Influence User Interaction</h1>
 
@@ -496,117 +479,68 @@
          <!-- Module 2.3 Blog Post Starts here -->
 
          <!-- Module 3.1 Blog Post Starts here -->
-          <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Moving Through Design</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 40px;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-    h1, h2 {
-      color: #2c3e50;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-      margin: 20px 0;
-      border-radius: 10px;
-    }
-    blockquote {
-      font-style: italic;
-      margin: 20px;
-      padding-left: 20px;
-      border-left: 4px solid #ccc;
-    }
-    .source {
-      font-size: 0.9em;
-      margin-top: 40px;
-      color: #555;
-    }
-  </style>
-</head>
-<body>
 
-  <h1>Moving Through Design: How Visual and Interaction Choices Influence User Experience</h1>
+  <h1>Moving Through Design: How Visual and Interaction Choices Shape User Experience</h1>
+    <p>In this time of digital design, every aspect of a screen has a purpose. Whether users are exploring an app, navigating a website, or checking out a product page, the visual and interaction design decisions made by designers are typically invisible guides that influence our experience, behavior, and expectations. Good design doesnt just make something look attractive, it shapes how users think, what they notice, and how easily they can finish tasks.</p>
 
-  <p>In this time of digital design, every aspect of a screen has a purpose. Whether users are exploring an app, navigating a website, or checking out a product page, the visual and interaction design decisions made by designers are typically invisible guides that influence our experience, behavior, and expectations.</p>
+    <h2>Layout and Control Design:</h2>
+    <p>Layout and control design act as masked signposts that either smooth or mess with a users journey. A clean, logical layout helps users know whats important and where to go next. Conversely, a cluttered or confusing layout can raise cognitive load, frustrate users, and lead to abandonment.</p>
+    <p>For instance, interfaces that follow a clear visual hierarchy, using consistent fonts, spacing, and colors, steer the eye naturally from headlines to calls to action. As Jeff Johnson notes in <em>Designing with the Mind in Mind</em>, “The principle of Proximity is that the relative distance between objects in a display affects our perception of whether and how the objects are organized into subgroups.” (Johnson, 2020). When related items are placed close together or styled similarly, we naturally group them. A poorly grouped layout, on the other hand, can cause confusion and misinterpretation of content.</p>
+    <p>Likewise, the design of interactive elements (buttons, sliders, input fields) affects user flow. Buttons must look clickable; forms must guide completion with visual cues like progressive disclosure. Controls that behave inconsistently or need unnecessary clicks interrupt the task stream, leading to what psychologists call cognitive friction.</p>
+    <p>This concept is repeated by Luke Wroblewski, who highlights the importance of form design in user conversion. His research establishes that minimizing input fields and using smart defaults drastically enhances completion rates (Wroblewski, 2008). These are not only just design choices; they are behavioral nudges and understanding them can make the difference between a user finishing a task or aborting it halfway through.</p>
 
-  <p>Good design doesnt just make something look attractive, it shapes how users think, what they notice, and how easily they can finish tasks.</p>
+ <img src="https://plus.unsplash.com/premium_photo-1720192861639-1524439fc166?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Gears on laptop screen" width="500">
 
-  <h2>Layout and Control Design:</h2>
-  <p>Layout and control design act as masked signposts that either smooth or mess with a users journey. A clean, logical layout helps users know whats important and where to go next. Conversely, a cluttered or confusing layout can raise cognitive load, frustrate users, and lead to abandonment.</p>
+    <h2>UX Laws in Action</h2>
+    <h3>1. Aesthetic Usability Effect</h3>
+    <p>Users are more prone to tolerate minor usability problems if an interface is aesthetically pleasing. This is often called the Aesthetic Usability Effect. Its a powerful concept that displays how emotional response influences our perception of function. A well-designed app may have small flaws, but if it's beautiful, users usually see those flaws as less serious.</p>
+    <p>In <em>Designing with the Mind in Mind</em>, Johnson explains that “If we are looking on a Web site for a campus map, our eyes and pointer-controlling hand are attracted to anything that might lead us to that goal. We more or less ignore anything unrelated to our goal.”(Johnson, 2020). This is particularly true in first-time interactions, where initial impressions can identify long-term user attitudes. Designers use this effect to create trust and minimize user anxiety. A gentle animation, polished color scheme, and readable typography can go a far in making users feel secure and confident.</p>
 
-  <blockquote>
-    “The principle of Proximity is that the relative distance between objects in a display affects our perception of whether and how the objects are organized into subgroups.” Johnson, 2020
-  </blockquote>
+    <h3>2. Von Restorff Effect</h3>
+    <p>The Von Restorff Effect, also called the isolation effect, explains that users will notice and remember the item thats unique from a group. When a button or element is visually separate, it draws attention, even if it's not the top of the list.</p>
+    <p>Jon Yablonski draws attention to this effect in <em>Laws of UX</em>, highlighting its usefulness in calls to action, error messages, or any content calling for immediate attention (Yablonski, 2020). However, designers should use this cautiously; if everything stands out, nothing does.</p>
+    <blockquote>“Our brain pays less and less attention to any stimulus that occurs frequently... Overuse of strong attention-getting methods can cause important messages to be blocked by habituation.”</blockquote>
+    <p>For example, Ive seen shopping sites that emphasize “Add to Cart” buttons in a contrasting color, while the “Save for Later” options are duller and more muted. This guides behavior toward the intended conversion goal. Its a slight form of persuasion that aligns with human attention patterns, steering users toward the path designers desire them to take, without forcing them.</p>
 
-  <p>Likewise, the design of interactive elements (buttons, sliders, input fields) affects user flow. Buttons must look clickable; forms must guide completion with visual cues like progressive disclosure.</p>
+<img src="https://plus.unsplash.com/premium_photo-1683288662040-5ca51d0880b2?q=80&w=2274&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Computer screen with checkmark showing a successful action" width="500">
 
-  <img src="https://plus.unsplash.com/premium_photo-1720192861639-1524439fc166?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Gears on laptop screen">
 
-  <h2>UX Laws in Action</h2>
+    <h3>3. Postels Law</h3>
+    <p>Postels Law informs designers to be liberal in what they accept and conservative in what they deliver. Utilized in UX, it means interfaces should be forgiving, accepting a span of user inputs, and recovering generously from errors.</p>
+    <p>A good case is search functionality. When users type incomplete searches or misspellings, robust design systems interpret the goal instead of failing. Googles “Did you mean…” suggestion is a perfect use of this principle.</p>
+    <p>Interfaces should help users recover, rather than punish them. This aligns with the claim that people make predictable errors, and systems should expect and guide corrections. Whether its pardoning input fields or automatically saving progress, these helpful designs respect the user's imperfection and make the experience more human.</p>
 
-  <h3>1. Aesthetic Usability Effect</h3>
-  <p>Users are more prone to tolerate minor usability problems if an interface is aesthetically pleasing.</p>
+    <h2>A Personal Experience with Interface Logic</h2>
+    <p>One of the most upsetting user experiences Ive had was with an airlines mobile app. The user interface looked clean, but the interaction flow was filled with inconsistencies.</p>
+    <p>After entering my booking code, I was redirected to a confirmation screen with two buttons: “Edit Flight” and “Check In.” Both looked identical, and I mistakenly tapped “Edit Flight,” which took me to a page informing me that changing the itinerary might cancel my seat. There was no return button, and the only way to return was to start from the homepage.</p>
+    <p>This broke several design principles. First, the lack of visual difference between primary and secondary actions broke the Von Restorff Effect. Secondly, the absence of a clear exit route broke Jakobs Law, which states that users anticipate consistent behavior based on common design patterns. Third, the app lacked error prevention, a principle supported by Johnson, who states that systems should stop problems before they occur, not just resolve them afterward.</p>
+    <p>By comparison, one of the most positive experiences Ive had was with Khan Academys app. It offers smooth interaction flow, feedback, and minimal cognitive load. If you answer incorrectly, it offers a tip and encourages retrying, employing both Postels Law and the Aesthetic Usability Effect. I keep using it not only because it works, but because it feels great to use.</p>
 
-  <blockquote>
-    “If we are looking on a Web site for a campus map, our eyes and pointer-controlling hand are attracted to anything that might lead us to that goal.” Johnson, 2020
-  </blockquote>
+    <h2>Overall Conclusion: Design is a Conversation</h2>
+    <p>Good interaction and visual design arent just for aesthetic purposes, theyre a dialogue with the user. They influence expectations, influence emotion, and steer behavior. When designers recognize how users think and anticipate how they might behave, they make intuitive, forgiving, and even joyful digital experiences.</p>
+    <p>Designing with the mind in mind means more than just knowing what looks pleasing to the eye. It needs a deep understanding of perception, memory, emotion, and human error. UX laws offer a fundamental framework, but the real power comes from seeing these principles in action, perfecting them through testing, and always coming back to one central question:</p>
 
-  <p>A gentle animation, polished color scheme, and readable typography can go a far way in making users feel secure and confident.</p>
+  <img src="https://plus.unsplash.com/premium_photo-1678565999332-1cde462f7b24?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Computer screen with code" width="500">
 
-  <h3>2. Von Restorff Effect</h3>
-  <p>The Von Restorff Effect, also called the isolation effect, explains that users will notice and remember the item thats unique from a group.</p>
+    <h3>Is this helping the user thrive?</h3>
+    <p>Because when design works with the mind, rather than working against it, we all move forward a little more smoothly.</p>
 
-  <img src="https://plus.unsplash.com/premium_photo-1683288662040-5ca51d0880b2?q=80&w=2274&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Computer screen with checkmark showing a successful action" style="max-width: 100%; height: auto;">
+    <footer class="article-footer"></footer>
+    <h2>Sources</h2>
+    <ul>
+      <li>Johnson, J. (2020). <em>Designing with the Mind in Mind</em> (3rd ed.). Morgan Kaufmann.</li>
+      <li>Yablonski, J. (2020). <em>Laws of UX</em> (2nd ed.). OReilly Media, Inc.</li>
+      <li>Wroblewski, L. (2008). <em>Web Form Design: Filling in the Blanks</em>. Rosenfeld Media.</li>
+      <li>Babich, N. (2017). <em>10 UX Laws Every Designer Should Know</em>. Smashing Magazine.</li>
+    </ul>
 
-  <blockquote>
-    “Overuse of strong attention-getting methods can cause important messages to be blocked by habituation.” Yablonski, 2020
-  </blockquote>
-
-  <h3>3. Postels Law</h3>
-  <p>Interfaces should be forgiving, accepting a span of user inputs, and recovering generously from errors.</p>
-
-  <p>Whether its pardoning input fields or automatically saving progress, these helpful designs respect the user's imperfection and make the experience more human.</p>
-
-  <h2>A Personal Experience with Interface Logic</h2>
-  <p>One of the most upsetting user experiences Ive had was with an airlines mobile app. The interface looked clean but lacked consistency, clarity, and proper error handling.</p>
-
-  <p>By contrast, Khan Academys app offers smooth interaction flow, feedback, and minimal cognitive load.</p>
-
-  <img src="https://plus.unsplash.com/premium_photo-1678565999332-1cde462f7b24?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Computer screen with code">
-
-  <h2>Overall Conclusion: Design is a Conversation</h2>
-  <p>Good interaction and visual design arent just for aesthetic purposes, theyre a dialogue with the user. They influence expectations, emotions, and behavior.</p>
-
-  <p>When design works with the mind, rather than against it, we all move forward a little more smoothly.</p>
-
-  <h3>Is this helping the user thrive?</h3>
-
-  <div class="source">
-    <strong>Sources:</strong><br>
-    Johnson, J. (2020). Designing with the Mind in Mind (3rd ed.). Morgan Kaufmann.<br>
-    Yablonski, J. (2020). Laws of UX (2nd ed.). OReilly Media, Inc.<br>
-    Wroblewski, L. (2008). Web Form Design: Filling in the Blanks. Rosenfeld Media.<br>
-    22 Basic UX Laws That Every Designer Should Know <li>https://www.shopify.com/partners/blog/ux-laws</li>
-  </div>
-
-</body>
-</html>
 
 
          <!-- Module 3.2 Blog Post Starts here -->
 
       </main>
 <!-- Page Footer  -->
-      <footer class="page-footer">
+      <footer class="article-footer">
        <p>Copyright &copy; 2025</p>
       </footer>
    </body>
